# offlineimap3

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Changelog.md  Dockerfile  MAINTAINERS.rst  README.md  offlineimap.conf  offlineimap.py  pyproject.toml  requirements-certify.txt  requirements-cygwin.txt  requirements-kerberos.txt  requirements.txt  rfc6555.py  setup.cfg  setup.py  snapcraft.yaml
contrib/: helpers.py  internet-urllib3.py  nametrans_imap_to_utf8.py  release.py  tested-by.py  upcoming.py
contrib/store-pw-with-gpg/: gpg-pw.py
offlineimap/: CustomConfig.py  __init__.py  accounts.py  bundled_imaplib2.py  emailutil.py  error.py  globals.py  imaplibutil.py  imapserver.py  imaputil.py  init.py  localeval.py  mbnames.py  threadutil.py  virtual_imaplib2.py
offlineimap/folder/: Base.py  Gmail.py  GmailMaildir.py  IMAP.py  LocalStatus.py  LocalStatusSQLite.py  Maildir.py  UIDMaps.py  __init__.py
offlineimap/repository/: Base.py  Gmail.py  GmailMaildir.py  IMAP.py  LocalStatus.py  Maildir.py  __init__.py
offlineimap/ui/: Curses.py  Machine.py  Noninteractive.py  TTY.py  UIBase.py  debuglock.py
offlineimap/utils/: const.py  distro.py  distro_utils.py  stacktrace.py
test/: README
test/OLItest/: TestRunner.py  __init__.py  globals.py
test/tests/: test_00_globals.py  test_00_imaputil.py  test_01_basic.py  test_02_MappedIMAP.py
