[metadata]
name = offlineimap
version = attr: offlineimap.__version__
description = Disconnected Universal IMAP Mail Synchronization/Reader Support
long_description = file: README.md
long_description_content_type = text/markdown
url = http://www.offlineimap.org
author = John Goerzen
author_email = offlineimap-project@lists.alioth.debian.org
license = GPL + exception
classifiers =
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Communications :: Email

[options]
packages =
    offlineimap
    offlineimap.folder
    offlineimap.repository
    offlineimap.ui
    offlineimap.utils
install_requires =
    certifi
    distro
    imaplib2@git+https://github.com/jazzband/imaplib2.git@08e267c2cdfa189b4bdfa138d7143ad247e2ca2a#egg=imaplib2-3.07.dev47+g08e267c
    pyyaml
    rfc6555
    urllib3>=1.25.9
    portalocker;platform_system == "Windows"
python_requires = >=3.6
scripts =
    bin/offlineimap

[options.extras_require]
kerberos =
    gssapi
